[package]
name = "mllm"
description = "A plug and play interface to prompt multiple LLM APIs from your rust programs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.0"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }